--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -14,9 +14,9 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='news' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">News</a></li>
-                <li {% if page.sectionid=='apps' %} class="active" {% endif %}><a href="{{ "/apps/home/" | prepend: site.baseurl }}">Applications</a></li>
-                <li {% if page.sectionid=='ppl'  %} class="active" {% endif %}><a href="{{ "/ppl/home/"  | prepend: site.baseurl }}">People</a></li>
-                <li {% if page.sectionid=='pubs' %} class="active" {% endif %}><a href="{{ "/pubs/home/" | prepend: site.baseurl }}">Publications</a></li>
+                <li {% if page.sectionid=='apps' %} class="active" {% endif %}><a href="{{ "/apps/" | prepend: site.baseurl }}">Applications</a></li>
+                <li {% if page.sectionid=='ppl'  %} class="active" {% endif %}><a href="{{ "/ppl/"  | prepend: site.baseurl }}">People</a></li>
+                <li {% if page.sectionid=='pubs' %} class="active" {% endif %}><a href="{{ "/pubs/" | prepend: site.baseurl }}">Publications</a></li>
             </ul>
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
