--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include topnav.html %}
 
-    <div class="page-content">
+    <div class="container">
         <div class="wrapper">
             {{ content }}
         </div>
