--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,7 +13,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='news' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">News</a></li>
+                <!--li {% if page.sectionid=='news' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">News</a></li-->
                 <li {% if page.sectionid=='apps' %} class="active" {% endif %}><a href="{{ "/apps/" | prepend: site.baseurl }}">Applications</a></li>
                 <li {% if page.sectionid=='ppl'  %} class="active" {% endif %}><a href="{{ "/ppl/"  | prepend: site.baseurl }}">People</a></li>
                 <li {% if page.sectionid=='pubs' %} class="active" {% endif %}><a href="{{ "/pubs/" | prepend: site.baseurl }}">Publications</a></li>
