--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -25,8 +25,11 @@
                         <i class="fa fa-search form-control-feedback"></i>
                     </div>
                 </form>
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                <ul class="nav navbar-nav">  
+                    <li><a href="mailto:{{ site.email }}" title="Contact us"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                    <li><a href="{{ site.forum_address }}" title="Google Groups"><i class="fa fa-comments" aria-hidden="true"></i></a></li>
+                    <li><a href="{{ site.issue_tracker }}" title="Issue tracker"><i class="fa fa-bug" aria-hidden="true"></i></a></li>
+                    <li><a href="{{ site.git_address }}" title="Source code"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
